# automations

./: .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  deploy.py  docker-compose.yml  implementation.md  pyproject.toml  runner.py
.github/workflows/: deploy.yml
config/: config.yaml
frontend/: .gitkeep  README.md
manual/: .gitkeep
scheduled/: .gitkeep  daily_context.py  weekly_context.py
scripts/: __init__.py  runner.py
scripts/example/: example_script.py
triggered/: .gitkeep  handler.py
utils/: __init__.py  config_loader.py  gateway.py  logger.py  scheduler.py
